# cpp-meson-template

./: README.md  meson.build  run  setup
src/: Core.h  gather_sources  main.cpp  meson.build
src/math/: MathString.h  MathUtils.h  Maths.h  Matrix.h  Operations.h  Special.h  Types.h  Vectors.h
src/platform/cross/window/: GLFWWindow.cpp
src/platform/vulkan/: Vulkan.cpp  Vulkan.h  VulkanInstance.cpp  VulkanInstance.h
src/vortex/window/: Window.cpp  Window.h
